Домашняя работа по CSS

--- a/js.html
+++ b/js.html
@@ -3,39 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <title>Javascript</title>
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-  	<img src="webLogo.png" height="70" width="130" alt="Логотип" />
-    <h1>Основы Web-технологий</h1>
-    <nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="web.html">Web-технологии</a>
-					<ul>
-						<li><a href="html5.html">HTML5</a></li>
-						<li><a href="css.html">CSS3</a></li>
-						<li><a href="#">Javascript</a></li>
+  	<div class="container">
+			<a class="webLogo" href="index.html"><img src="webLogo.png" height="70" width="130" alt="Логотип" /></a>
+			<h1>Основы Web-технологий</h1>
+			<nav>
+				<div class="navigation">
+					<ul class="menu">
+						<li><a href="#">Главная</a></li>
+						<li class="submenu">
+							<a href="web.html">Web-технологии</a>
+							<ul>
+								<li><a href="html5.html">HTML5</a></li>
+								<li><a href="css.html">CSS3</a></li>
+								<li><a href="js.html">Javascript</a></li>
+							</ul>
+						</li>
+						<li><a href="calc.html">Калькулятор</a></li>
+						<li><a href="test.html">Тест</a></li>
 					</ul>
-				</li>
-				<li><a href="calc.html">Калькулятор</a></li>
-				<li><a href="test.html">Тест</a></li>
-			</ul>
-  	</nav>
+				</div>
+			</nav>
+		</div>
   </header>
   <main>
-  	<h2>JavaScript</h2>
-  	<p><strong><em>JavaScript</em></strong> — <em>прототипно-ориентированный сценарный язык программирования.</em> Является <i>диалектом</i> языка <em>ECMAScript.</em></p>
-  	<p>JavaScript обычно используется как встраиваемый язык для программного доступа к объектам <i>приложений</i>. Наиболее широкое применение находит в <i>браузерах</i> как язык сценариев для придания <em>интерактивности Web-страницам.</em></p>
-		<p>Основные архитектурные черты: <em>динамическая типизация</em>, слабая типизация, <em>автоматическое управление памятью</em>, <em>прототипное программирование</em>, функции как <em>объекты первого класса.</em></p>
-  	<p>На JavaScript оказали влияние многие языки, при разработке была цель сделать язык похожим на Java, но при этом лёгким для использования <i>непрограммистами</i>. Языком JavaScript не владеет какая-либо компания или организация, что отличает его от ряда языков программирования, используемых в Web-разработке.</p>
-  	<p>Название «JavaScript» является зарегистрированным <i>товарным знаком</i> <i>компании Oracle Corporation</i>.</p>
+  	<div class="container">
+			<h2>JavaScript</h2>
+			<p><strong><em>JavaScript</em></strong> — <em>прототипно-ориентированный сценарный язык программирования.</em> Является <i>диалектом</i> языка <em>ECMAScript.</em></p>
+			<p>JavaScript обычно используется как встраиваемый язык для программного доступа к объектам <i>приложений</i>. Наиболее широкое применение находит в <i>браузерах</i> как язык сценариев для придания <em>интерактивности Web-страницам.</em></p>
+			<p>Основные архитектурные черты: <em>динамическая типизация</em>, слабая типизация, <em>автоматическое управление памятью</em>, <em>прототипное программирование</em>, функции как <em>объекты первого класса.</em></p>
+			<p>На JavaScript оказали влияние многие языки, при разработке была цель сделать язык похожим на Java, но при этом лёгким для использования <i>непрограммистами</i>. Языком JavaScript не владеет какая-либо компания или организация, что отличает его от ряда языков программирования, используемых в Web-разработке.</p>
+			<p>Название «JavaScript» является зарегистрированным <i>товарным знаком</i> <i>компании Oracle Corporation</i>.</p>
+		</div>
   </main>
   <footer>
-  	<address>
-  		<a href="#">Пишите:mail@mail</a>
-  	</address>
-  	<p>&copy;	 Фамилия И.О., год</p>
+  	<div class="container">
+			<address>
+				<a href="#">Пишите:mail@mail</a>
+			</address>
+			<p>&copy;	 Фамилия И.О., год</p>
+		</div>
   </footer>
 </body>
 </html>
