--- a/calc.html
+++ b/calc.html
@@ -3,67 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <title>Калькулятор</title>
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-  	<img src="webLogo.png" height="70" width="130" alt="Логотип" />
-    <h1>Основы Web-технологий</h1>
-    <nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="web.html">Web-технологии</a>
-					<ul>
-						<li><a href="html5.html">HTML5</a></li>
-						<li><a href="css.html">CSS3</a></li>
-						<li><a href="js.html">Javascript</a></li>
+  	<div class="container">
+			<a class="webLogo" href="index.html"><img src="webLogo.png" height="70" width="130" alt="Логотип" /></a>
+			<h1>Основы Web-технологий</h1>
+			<nav>
+				<div class="navigation">
+					<ul class="menu">
+						<li><a href="#">Главная</a></li>
+						<li class="submenu">
+							<a href="web.html">Web-технологии</a>
+							<ul>
+								<li><a href="html5.html">HTML5</a></li>
+								<li><a href="css.html">CSS3</a></li>
+								<li><a href="js.html">Javascript</a></li>
+							</ul>
+						</li>
+						<li><a href="calc.html">Калькулятор</a></li>
+						<li><a href="test.html">Тест</a></li>
 					</ul>
-				</li>
-				<li><a href="#">Калькулятор</a></li>
-				<li><a href="test.html">Тест</a></li>
-			</ul>
-  	</nav>
+				</div>
+			</nav>
+		</div>
   </header>
   <main>
-  	<form action="#" id="calc" name="calc" >
-			<table border="1">
-				<tr>
-					<td colspan="5"><input name="result" type="text"></td>
-				</tr>
-				<tr>
-					<td><button type="button" name="button7">7</button></td>
-					<td><button type="button" name="button8">8</button></td>
-					<td><button type="button" name="button9">9</button></td>
-					<td><button type="button" name="buttonSlash">/</button></td>
-					<td><button type="button">C</button></td>
-				</tr>
-				<tr>
-					<td><button type="button" name="button4">4</button></td>
-					<td><button type="button" name="button5">5</button></td>
-					<td><button type="button" name="button6">6</button></td>
-					<td><button type="button" name="asteriks">*</button></td>
-					<td><button type="button" name="plusMin">&plusmn;</button></td>
-				</tr>
-				<tr>
-					<td><button type="button" name="button1">1</button></td>
-					<td><button type="button" name="button2">2</button></td>
-					<td><button type="button" name="button3">3</button></td>
-					<td><button type="button" name="min">-</button></td>
-					<td rowspan="2"><button type="button" name="equals">=</button></td>
-				</tr>
-				<tr>
-					<td colspan="2"><button type="button" name="button0">0</button></td>
-					<td><button type="button" name="dot">.</button></td>
-					<td><button type="button" name="plus">+</button></td>
+		<div class="container">
+			<form action="#" id="calc" name="calc" >
+				<table class="calc">
+					<tr>
+						<td colspan="5" class="result"><input name="result" type="text"></td>
+						</tr>
+					<tr>
+						<td><button type="button" name="button7">7</button></td>
+						<td><button type="button" name="button8">8</button></td>
+						<td><button type="button" name="button9">9</button></td>
+						<td><button type="button" name="buttonSlash">/</button></td>
+						<td><button type="button">C</button></td>
+					</tr>
+					<tr>
+						<td><button type="button" name="button4">4</button></td>
+						<td><button type="button" name="button5">5</button></td>
+						<td><button type="button" name="button6">6</button></td>
+						<td><button type="button" name="asteriks">*</button></td>
+						<td><button type="button" name="plusMin">&plusmn;</button></td>
+					</tr>
+					<tr>
+						<td><button type="button" name="button1">1</button></td>
+						<td><button type="button" name="button2">2</button></td>
+						<td><button type="button" name="button3">3</button></td>
+						<td><button type="button" name="min">-</button></td>
+						<td rowspan="2" class="equals"><button type="button" name="equals">=</button></td>
+					</tr>
+					<tr>
+						<td colspan="2"><button type="button" name="button0">0</button></td>
+						<td><button type="button" name="dot">.</button></td>
+						<td><button type="button" name="plus">+</button></td>
 
-				</tr>
-			</table>
-  	</form>
+					</tr>
+				</table>
+			</form>
+		</div>
   </main>
   <footer>
-  	<address>
-  		<a href="#">Пишите:mail@mail</a>
-  	</address>
-  	<p>&copy;	 Фамилия И.О., год</p>
+  	<div class="container">
+			<address>
+				<a href="#">Пишите:mail@mail</a>
+			</address>
+			<p>&copy;	 Фамилия И.О., год</p>
+		</div>
   </footer>
 </body>
 </html>
