--- a/css.html
+++ b/css.html
@@ -3,36 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <title>CSS3</title>
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-  	<img src="webLogo.png" height="70" width="130" alt="Логотип" />
-    <h1>Основы Web-технологий</h1>
-    <nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="web.html">Web-технологии</a>
-					<ul>
-						<li><a href="html5.html">HTML5</a></li>
-						<li><a href="#">CSS3</a></li>
-						<li><a href="js.html">Javascript</a></li>
+  	<div class="container">
+			<a class="webLogo"  href="index.html"><img src="webLogo.png" height="70" width="130" alt="Логотип" /></a>
+			<h1>Основы Web-технологий</h1>
+			<nav>
+				<div class="navigation">
+					<ul class="menu">
+						<li><a href="#">Главная</a></li>
+						<li class="submenu">
+							<a href="web.html">Web-технологии</a>
+							<ul>
+								<li><a href="html5.html">HTML5</a></li>
+								<li><a href="css.html">CSS3</a></li>
+								<li><a href="js.html">Javascript</a></li>
+							</ul>
+						</li>
+						<li><a href="calc.html">Калькулятор</a></li>
+						<li><a href="test.html">Тест</a></li>
 					</ul>
-				</li>
-				<li><a href="calc.html">Калькулятор</a></li>
-				<li><a href="test.html">Тест</a></li>
-			</ul>
-  	</nav>
+				</div>
+			</nav>
+		</div>
   </header>
   <main>
-  	<h2><abbr title="Cascading Style Sheets">CSS3</abbr></h2>
-  	<p><strong><em><abbr title="Cascading Style Sheets">CSS</abbr></em></strong> (англ. Cascading Style Sheets — каскадные таблицы стилей) — <em>формальный язык</em> описания внешнего вида документа, написанного с использованием <i>языка разметки.</i></p>
-  	<p>Преимущественно используется как средство описания, оформления внешнего вида <i>Web-страниц</i>, написанных с помощью <i>языков разметки</i> <abbr title="HyperText Markup Language">HTML</abbr> и  <abbr title="eXtensible HyperText Markup Language">XHTML</abbr>, но может также применяться к любым <abbr title="eXtensible Markup Language">XML</abbr>- <i>документам</i>, например, к <abbr title="Scalable Vector Graphics">SVG</abbr> или <abbr title="XML User Interface Language">XUL</abbr>.</p>
-  </main>
+  	<div class="container">
+			<h2><abbr title="Cascading Style Sheets">CSS3</abbr></h2>
+			<p><strong><em><abbr title="Cascading Style Sheets">CSS</abbr></em></strong> (англ. Cascading Style Sheets — каскадные таблицы стилей) — <em>формальный язык</em> описания внешнего вида документа, написанного с использованием <i>языка разметки.</i></p>
+			<p>Преимущественно используется как средство описания, оформления внешнего вида <i>Web-страниц</i>, написанных с помощью <i>языков разметки</i> <abbr title="HyperText Markup Language">HTML</abbr> и  <abbr title="eXtensible HyperText Markup Language">XHTML</abbr>, но может также применяться к любым <abbr title="eXtensible Markup Language">XML</abbr>- <i>документам</i>, например, к <abbr title="Scalable Vector Graphics">SVG</abbr> или <abbr title="XML User Interface Language">XUL</abbr>.</p>
+		</div>
+	</main>	
   <footer>
-  	<address>
-  		<a href="#">Пишите:mail@mail</a>
-  	</address>
-  	<p>&copy;	 Фамилия И.О., год</p>
+  	<div class="container">
+			<address>
+				<a href="#">Пишите:mail@mail</a>
+			</address>
+			<p>&copy;	 Фамилия И.О., год</p>
+		</div>
   </footer>
 </body>
 </html>
