--- a/web.html
+++ b/web.html
@@ -3,56 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <title>Web-технологии</title>
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-  	<img src="webLogo.png" height="70" width="130" alt="Логотип" />
-    <h1>Основы Web-технологий</h1>
-    <nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="#">Web-технологии</a>
-					<ul>
-						<li><a href="html5.html">HTML5</a></li>
-						<li><a href="css.html">CSS3</a></li>
-						<li><a href="js.html">Javascript</a></li>
+ 	<header>
+ 		<div class="container">
+			<a class="webLogo" href="index.html"><img src="webLogo.png" height="70" width="130" alt="Логотип" /></a>
+			<h1>Основы Web-технологий</h1>
+			<nav>
+				<div class="navigation">
+					<ul class="menu">
+						<li><a href="index.html">Главная</a></li>
+						<li class="submenu">
+							<a href="#">Web-технологии</a>
+							<ul>
+								<li><a href="html5.html">HTML5</a></li>
+								<li><a href="css.html">CSS3</a></li>
+								<li><a href="js.html">Javascript</a></li>
+							</ul>
+						</li>
+						<li><a href="calc.html">Калькулятор</a></li>
+						<li><a href="test.html">Тест</a></li>
 					</ul>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<main>
+ 		<div class="container">
+			<p>Web-технологии можно условно разделить на две пересекающиеся группы: <em>клиентские</em> и <em>серверные</em></p>
+			<ul class="webTech">
+				<li>Клиентские:
+					<dl>
+						<dt><strong><abbr title="HyperText Markup Language">HTML</abbr></strong></dt>
+						<dd>стандартный язык разметки Web-страниц</dd>
+						<dt><strong><abbr title="Cascading Style Sheets">CSS</abbr></strong></dt>
+						<dd>средство описания и оформления внешнего вида Web-страниц</dd>
+						<dt><strong>JavaScript</strong></dt>
+						<dd>применяется в браузерах как язык сценариев для придания интерактивности Web-страницам</dd>
+					</dl>
 				</li>
-				<li><a href="calc.html">Калькулятор</a></li>
-				<li><a href="test.html">Тест</a></li>
+				<li>Серверные:
+					<dl>
+						<dt><strong><abbr title="Active Server Pages for .NET">ASP.NET(C#)</abbr></strong></dt>
+						<dd>технология создания Web-приложений от компании Microsoft</dd>
+						<dt><strong><abbr title="JavaServer Pages">JSP (Java)</abbr></strong></dt>
+						<dd>технология создания Web-приложений от компании Oracle</dd>
+						<dt><strong><abbr title="Hypertext Preprocessor">PHP</abbr></strong></dt>
+						<dd>язык программирования, интенсивно применяемый для разработки Web-приложений</dd>
+					</dl>
+				</li>
 			</ul>
-  	</nav>
-  </header>
-  <main>
-  	<p>Web-технологии можно условно разделить на две пересекающиеся группы: <em>клиентские</em> и <em>серверные</em></p>
-		<ul>
-			<li>Клиентские:
-				<dl>
-					<dt><strong><abbr title="HyperText Markup Language">HTML</abbr></strong></dt>
-					<dd>стандартный язык разметки Web-страниц</dd>
-					<dt><strong><abbr title="Cascading Style Sheets">CSS</abbr></strong></dt>
-					<dd>средство описания и оформления внешнего вида Web-страниц</dd>
-					<dt><strong>JavaScript</strong></dt>
-					<dd>применяется в браузерах как язык сценариев для придания интерактивности Web-страницам</dd>
-				</dl>
-			</li>
-			<li>Серверные:
-				<dl>
-					<dt><strong><abbr title="Active Server Pages for .NET">ASP.NET(C#)</abbr></strong></dt>
-					<dd>технология создания Web-приложений от компании Microsoft</dd>
-					<dt><strong><abbr title="JavaServer Pages">JSP (Java)</abbr></strong></dt>
-					<dd>технология создания Web-приложений от компании Oracle</dd>
-					<dt><strong><abbr title="Hypertext Preprocessor">PHP</abbr></strong></dt>
-					<dd>язык программирования, интенсивно применяемый для разработки Web-приложений</dd>
-				</dl>
-			</li>
-		</ul>
+		</div>
   </main>
   <footer>
-  	<address>
-  		<a href="#">Пишите:mail@mail</a>
-  	</address>
-  	<p>&copy;	 Фамилия И.О., год</p>
+  	<div class="container">
+			<address>
+				<a href="#">Пишите:mail@mail</a>
+			</address>
+			<p>&copy;	 Фамилия И.О., год</p>
+		</div>
   </footer>
 </body>
 </html>
