Домашнее задание по CSS

--- a/calc.html
+++ b/calc.html
@@ -14,7 +14,7 @@
 			<nav>
 				<div class="navigation">
 					<ul class="menu">
-						<li><a href="#">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li class="submenu">
 							<a href="web.html">Web-технологии</a>
 							<ul>
@@ -23,7 +23,7 @@
 								<li><a href="js.html">Javascript</a></li>
 							</ul>
 						</li>
-						<li><a href="calc.html">Калькулятор</a></li>
+						<li><a href="#">Калькулятор</a></li>
 						<li><a href="test.html">Тест</a></li>
 					</ul>
 				</div>
