--- a/css.html
+++ b/css.html
@@ -14,12 +14,12 @@
 			<nav>
 				<div class="navigation">
 					<ul class="menu">
-						<li><a href="#">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li class="submenu">
 							<a href="web.html">Web-технологии</a>
 							<ul>
 								<li><a href="html5.html">HTML5</a></li>
-								<li><a href="css.html">CSS3</a></li>
+								<li><a href="#">CSS3</a></li>
 								<li><a href="js.html">Javascript</a></li>
 							</ul>
 						</li>
