--- a/js.html
+++ b/js.html
@@ -14,13 +14,13 @@
 			<nav>
 				<div class="navigation">
 					<ul class="menu">
-						<li><a href="#">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li class="submenu">
 							<a href="web.html">Web-технологии</a>
 							<ul>
 								<li><a href="html5.html">HTML5</a></li>
 								<li><a href="css.html">CSS3</a></li>
-								<li><a href="js.html">Javascript</a></li>
+								<li><a href="#">Javascript</a></li>
 							</ul>
 						</li>
 						<li><a href="calc.html">Калькулятор</a></li>
