Домашка по CSSисправленная

--- a/test.html
+++ b/test.html
@@ -61,22 +61,22 @@
 					<label for="question3-4"><input type="radio" name="question3" id="question3-4" />&lt;meta /&gt;</label>
 					<br />
 				<p>Какие теги используются при создании таблицы:</p>
-					<label for="question4-1"><input type="radio" name="question4" id="question4-1" />&lt;bodyt&gt;</label>
+					<label for="question4-1"><input type="checkbox" name="question4" id="question4-1" />&lt;bodyt&gt;</label>
 					<br />
-					<label for="question4-2"><input type="radio" name="question4" id="question4-2" />&lt;td&gt;</label>
+					<label for="question4-2"><input type="checkbox" name="question4" id="question4-2" />&lt;td&gt;</label>
 					<br />
-					<label for="question4-3"><input type="radio" name="question4" id="question4-3" />&lt;caption&gt;</label>
+					<label for="question4-3"><input type="checkbox" name="question4" id="question4-3" />&lt;caption&gt;</label>
 					<br />
-					<label for="question4-4"><input type="radio" name="question4" id="question4-4" />&lt;column&gt;</label>
+					<label for="question4-4"><input type="checkbox" name="question4" id="question4-4" />&lt;column&gt;</label>
 					<br />
 				<p>Какие атрибуты используются при создании форм:</p>
-					<label for="question5-1"><input type="radio" name="question5" id="question5-1" />autocomplete</label>
+					<label for="question5-1"><input type="checkbox" name="question5" id="question5-1" />autocomplete</label>
 					<br />
-					<label for="question5-2"><input type="radio" name="question5" id="question5-2" />action</label>
+					<label for="question5-2"><input type="checkbox" name="question5" id="question5-2" />action</label>
 					<br />
-					<label for="question5-3"><input type="radio" name="question5" id="question5-3" />charset</label>
+					<label for="question5-3"><input type="checkbox" name="question5" id="question5-3" />charset</label>
 					<br />
-					<label for="question5-4"><input type="radio" name="question5" id="question5-4" />validate</label>
+					<label for="question5-4"><input type="checkbox" name="question5" id="question5-4" />validate</label>
 					<br />
 				<button type="button" name="result" id="result">Pезультат</button>
 			</form>
