--- a/calc.html
+++ b/calc.html
@@ -5,6 +5,7 @@
   <title>Калькулятор</title>
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
   <header>
@@ -35,7 +36,7 @@
 			<form action="#" id="calc" name="calc" >
 				<table class="calc">
 					<tr>
-						<td colspan="5" class="result"><input name="result" type="text" value=""></td>
+						<td colspan="5" class="result"><input name="result" id="result" type="text" value=""></td>
 						</tr>
 					<tr>
 						<td><button type="button" name="button7" class="number">7</button></td>
