--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
   <title>Тест</title>
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
   <header>
