--- a/homework bootstrap3/html5.html
+++ b/homework bootstrap3/html5.html
@@ -23,9 +23,8 @@
 						<ul class="list-inline">
 							<li><a href="#">Главная</a></li>
 							<li class="dropdown">
-								<a href="#" data-toggle="dropdown">Web-технологии
-								<span class="caret"></span>
-								</a>
+								<a href="#">Web-технологии</a>
+								<a href="#" data-toggle="dropdown"><span class="caret"></span></a>								
 								<ul class="dropdown-menu">
 									<li><a href="#"><span class="text-primary">HTML5</span></a></li>
 									<li><a href="#"><span class="text-primary">CSS3</span></a></li>
